--- a/index.html
+++ b/index.html
@@ -6,12 +6,37 @@
     <title>Fun with Bootstrap</title>  
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 
   </head>
 
   <body>
-      <div class="jumbotron text-center">
-          <h1>Johnnie Simpson: Web Developer</h1>
-          <p>Welcome to my website.</p>
+    <div class="jumbotron">
+        <h1 class="display-4">Hello, World! Welcome to my Phish Fan Page</h1>
+        <p class="lead">Just another Phish fan page.</p>
+        <hr class="my-4">
+        <p>The greatest band of all time deserves a website that works on desktop as well as mobile. Thanks, Bootstrap!</p>
+        <img src="https://miro.medium.com/max/1200/1*jE71P2N48_TYi0Pvbncmag.jpeg" alt="Good band, dude.">
+        <a class="btn btn-primary btn-lg" class="my-button" href="#" role="button">Play a Jam</a>
       </div>
+
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Check it out</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#">The Band</a>
+            <a class="nav-link" href="#">Albums</a>
+            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Tour</a>
+          </div>
+        </div>
+      </nav>
+      <button type="button" class="btn btn-warning">Concert footage</button>
+      <button type="button" class="btn btn-danger">Interviews</button>
+      <button type="button" class="btn btn-info">Gamehendge</button>
+
+      <footer class=footer>A theme from the bottom.</footer>
   </body>
