Updated image link in html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <p class="lead">Just another Phish fan page.</p>
         <hr class="my-4">
         <p>The greatest band of all time deserves a website that works on desktop as well as mobile. Thanks, Bootstrap!</p>
-        <img src="https://miro.medium.com/max/1200/1*jE71P2N48_TYi0Pvbncmag.jpeg" alt="Good band, dude.">
+        <img src="https://static01.nyt.com/images/2011/12/31/arts/PHISH-JP/PHISH-JP-articleLarge.jpg?quality=75&auto=webp&disable=upscale" alt="Trey">
         <a class="btn btn-primary btn-lg" class="my-button" href="#" role="button">Play a Jam</a>
       </div>
 
